# parameterized

./: .gitignore  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md  bors.toml  deny.toml  justfile  test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  fmt.yml  licenses_and_advisories.yml  msrv.yml  test.yml
.github/workfows/: ci.yml
crates/parameterized-macro/: Cargo.toml
crates/parameterized-macro/src/: attribute.rs
crates/parameterized-macro/tests/: cases.rs
crates/parameterized-macro/tests/fail/: id_already_defined.stderr
crates/parameterized_case/: Cargo.toml  readme.md
crates/parameterized_case/src/: lib.rs
crates/parameterized_case/tests/: cases.rs
crates/parameterized_case/tests/ok/: 01_case.rs  02_multiple_parameters.rs
crates/parameterized_macro/examples/: fruits.rs
crates/parameterized_macro/src/: lib.rs
example-usage/: Cargo.toml
example-usage/src/: lib.rs  main.rs
expand/: Cargo.toml  expand.sh
expand/src/: _others.rs  main.rs
macro/: Cargo.toml  readme.md
macro/src/: attribute.rs  lib.rs
macro/tests/: cases.rs
macro/tests/fail/: id_already_defined.rs  id_already_defined.stderr  inequal_amount_of_arg.stderr  square_brackets.stderr
macro/tests/todo/: input_param_order_in_err_message.rs
parameterized-macro/: Cargo.toml  readme.md
parameterized-macro/examples/: fruits.rs
parameterized-macro/src/: attribute.rs  fun.rs  generation.rs  lib.rs  parser.rs  tests.rs
parameterized-macro/src/case_by_case/: fun.rs  mod.rs  restructure.rs  test_cases.rs
parameterized-macro/src/impls/: map.rs  mod.rs  restructure.rs  validation.rs
parameterized-macro/src/value_source/: restructure.rs
parameterized-macro/tests/: cases.rs
parameterized-macro/tests/fail/: id_already_defined.stderr  inequal_amount_of_arg.stderr  inequal_amount_of_arg_order.rs  inequal_amount_of_arg_order.stderr  input_param_order_in_err_message.stderr  multiple_custom_test_attributes.rs  multiple_custom_test_attributes.stderr  no_argument.stderr  no_param.stderr  no_param_nr2.stderr  on_visibility.rs  on_visibility.stderr
parameterized-macro/tests/ok/: 21_custom_test_attribute.rs  21_custom_test_attribute_complex_meta.rs  21_result.rs  22_try_operator.rs  23_return_not_impl_try.rs
src/: case_by_case.rs  lib.rs  matrix.rs  value_source.rs  values.rs
