[package]
name = "parameterized"
version = "1.0.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Procedural macro which brings a compact parameterized testing implementation to Rust (inspired by JUnit @ParameterizedTest)"
documentation = "https://docs.rs/crate/parameterized"
repository = "https://github.com/foresterre/parameterized"
readme = "README.md"
keywords = ["parameterized", "parametrized", "test", "unit-test", "junit"]
categories = ["development-tools", "development-tools::testing"]

[package.metadata]
msrv = "1.56.0"

[dependencies]
parameterized-macro = { path = "parameterized-macro", version = "1" }

[workspace]
members = ["parameterized-macro"]

[features]
# not semver protected
square-brackets-old-error-message = ["parameterized-macro/square-brackets-old-error-message"]
