[package]
name = "parameterized"
version = "2.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macro which brings a compact parameterized testing implementation to Rust (inspired by JUnit @ParameterizedTest)"
documentation = "https://docs.rs/crate/parameterized"
repository = "https://github.com/foresterre/parameterized"
readme = "README.md"
keywords = ["parameterized", "parametrized", "test", "unit-test", "junit"]
categories = ["development-tools", "development-tools::testing"]
rust-version = "1.63"

[features]
# not semver protected
__unstable_square-brackets-old-error-message = ["parameterized-macro/__unstable_square-brackets-old-error-message"]

[workspace]
members = ["parameterized-macro"]

[dependencies]
parameterized-macro = { path = "parameterized-macro", version = "2" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
