[package]
name = "example-usage"
version = "0.2.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
parameterized = { path = "..", default-features = false, features = ["matrix"] }