[package]
name = "parameterized-macro"
version = "0.3.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Attribute macro crate for parameterized tests."
documentation = "https://docs.rs/parameterized-macro"
repository = "https://github.com/foresterre/parameterized"
readme = "readme.md"
keywords = ["parameterized", "attribute", "test", "unit-test", "junit"]
categories = ["development-tools", "development-tools::testing"]

autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/cases.rs"

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full"] }
linked-hash-map = { version = "0.5.3" }

[dev-dependencies]
trybuild = "1.0"
