[package]
name = "parameterized-macro"
version = "2.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Attribute macro crate for parameterized tests."
documentation = "https://docs.rs/parameterized-macro"
repository = "https://github.com/foresterre/parameterized"
readme = "readme.md"
keywords = ["parameterized", "attribute", "test", "unit-test", "junit"]
categories = ["development-tools", "development-tools::testing"]

autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/cases.rs"

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"

[dependencies.syn]
version = "2.0.52"
features = ["full"]

[dependencies.indexmap]
version = "1.6.2"
default-features = false

[dev-dependencies]
trybuild = "1.0"

[features]
# not semver protected
square-brackets-old-error-message = []
