[package]
name = "parameterized-macro"
version = "3.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Attribute macro crate for parameterized tests."
documentation = "https://docs.rs/parameterized-macro"
repository = "https://github.com/foresterre/parameterized"
readme = "readme.md"
keywords = ["parameterized", "attribute", "test", "unit-test", "junit"]
categories = ["development-tools", "development-tools::testing"]
rust-version = "1.68"

autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/cases.rs"

[dependencies]
fnv = "1.0.7"
# from indexmap 2.12 the MSRV is 1.82; unless indexmap needs security updates, a lower MSRV is preferable, since parameterized doesn't need it
indexmap = { version = "~2.11.4", default-features = false }
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "2.0.52", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.113"

[features]
# not semver protected
__unstable_square-brackets-old-error-message = []
