[package]
name = "parameterized-case"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Attribute macro crate for (named) parameterized test cases."
documentation = "https://docs.rs/parameterized-case"
repository = "https://github.com/foresterre/parameterized"
readme = "readme.md"
keywords = ["parameterized", "attribute", "test", "unit-test", "junit"]
categories = ["development-tools", "development-tools::testing"]

autotests = false

[features]
enable_test_with_wildcard = []

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/cases.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"